v2.6.4
----------------------------------------------------------------------------------------------------
 * New directive `MDInitialDelay`, controlling how longer to wait after
   a server restart before checking certificates for renewal.
   [Michael Kaufmann]

v2.6.3
----------------------------------------------------------------------------------------------------
 * borked the git tag. meh.

v2.6.2
----------------------------------------------------------------------------------------------------
 * Fix error retry delay calculation to not already doubling the wait
   on the first error.

v2.6.1
----------------------------------------------------------------------------------------------------
 * Increasing default `MDRetryDelay` to 30 seconds to generate less bursty
   traffic on errored renewals for the ACME CA. This leads to error retries
   of 30s, 1 minute, 2, 4, etc. up to daily attempts.
 * Checking that configuring `MDRetryDelay` will result in a positive
   duration. A delay of 0 is not accepted.
 * Fix a bug in checking Content-Type of responses from the ACME server.

v2.6.0
----------------------------------------------------------------------------------------------------
 * Added ACME ARI support (rfc9773) to the module. Enabled by default. New
   directive "MDRenewViaARI on|off" for controlling this. Documentation in
   README.md
 * Removing tailscale support. It has not been working for a long time
   as the company decided to change their APIs. Away with the dead code,
   documentation and tests.

v2.5.3
----------------------------------------------------------------------------------------------------
 * Fixed a compilation issue with pre-industrial versions of libcurl.

v2.5.2
----------------------------------------------------------------------------------------------------
 * Fixed TLS-ALPN-01 challenges when multiple `MDPrivateKeys` are specified
   with EC keys before RSA ones. Fixes #377.