@@ -1,3 +1,9 @@
+ * Hardening: when build with OpenSSL older than 1.0.2 or old libressl versions,
+   the parsing of ASN.1 time strings did not do a length check.
+ * Hardening: when reading back OCSP responses stored in the local JSON store,
+   missing 'valid' key led to uninitialized values, resulting in wrong
+   refresh behaviour.
+
 v2.6.4
 ----------------------------------------------------------------------------------------------------
  * New directive `MDInitialDelay`, controlling how longer to wait after
